--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3314,3 +3314,13 @@ input, select, textarea {
 			}
 
 	}
+	.container_contacts {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	.container_h5 {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+	}
