technical skills added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,6 +104,9 @@ input, select, textarea {
 		font-weight: 400;
 		line-height: 1.75em;
 	}
+	.languages {
+		width: 100%;
+	}
 
 	a {
 		-moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
